[package]
name = "solana-launchpad"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_launchpad"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
light-sdk = { version = "0.17.1", features = ["anchor"] }
light-hasher = { version = "5.0.0", features = ["solana"] }
light-sdk-types = { version = "0.17.1", features = ["anchor"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "2.2"

[dev-dependencies]
light-client = "0.17.2"
light-program-test = "0.17.1"
tokio = "1.36.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
